syntax = "proto3";

package authenticationService;

option go_package="./";

message SignUpRequest {
  string name = 1;
  string email = 2;
  string originURL = 3;
  string phoneNumber = 4;
}

message SignUpResponse {
  int32 status = 1;
  bool success = 2;
  int32 userId = 3;
  string data = 4;
}

message LoginRequest {
  string email = 1;
  string phoneNumber = 2;
}

message LoginResponse {
  int32 status = 1;
  bool success = 2;
  string token = 3;
}

message VerifyAccountRequest {
  string phoneNumber = 1;
  int64 otp=2;
  bool isSigningIn=3;
}

message VerifyAccountResponse {
  int32 status = 1;
  bool isVerified = 2;
  optional string  accessToken=3;
}

service AuthenticationService {
  rpc signup (SignUpRequest) returns (SignUpResponse);
  rpc verifyUser (VerifyAccountRequest) returns (VerifyAccountResponse);
  rpc login (LoginRequest) returns (LoginResponse);
}
