syntax = "proto3";
package userServuice;

option go_package="./";

message Response {
 optional string name = 1;
  int32 id = 2;  // Unique ID  for this person.
  string email = 3;
  bool isVerified=4;
}
message Request {
 optional string name=1;
 optional string email=2;
 optional string id=3;
}

message GetUserWithEmail {
 string email=1;
}
message CreateUserResponse {
  int32 status=1;
  bool success=2;
optional  Response data=3;
}

message MarkUserAsVerfiedRequest {
 bool isVerified=1;
 string email=2;
}
message MarkUserAsVerfiedResponse {
  int32 status=1;
  bool success=2;
optional  Response data=3;
}

service userService {
rpc GetUserByName(Request) returns (Response);
rpc	GetUserById(Request) returns (Response);
rpc	GetUserByEmail(GetUserWithEmail) returns (Response);
rpc CreateUser(Request)returns (CreateUserResponse);
rpc MarkAsVerfied (MarkUserAsVerfiedRequest) returns (MarkUserAsVerfiedResponse);
}
